--- a/rdkafka-api.cabal
+++ b/rdkafka-api.cabal
@@ -1,10 +1,6 @@
 cabal-version: 2.4
 name:                rdkafka-api
 version:             0.1.0.0
--- synopsis:
--- description:
--- bug-reports:
--- license:
 license-file:        LICENSE
 author:              Andrew Martin
 maintainer:          andrew.thaddeus@gmail.com
@@ -37,6 +33,8 @@ library
     , primitive >= 0.7
     , byteslice >= 0.2.2
     , posix-api
+    , bytestring >= 0.10.8 && <0.12
+    , run-st >= 0.1.1
   hs-source-dirs: src
   c-sources: cbits/HaskellRdkafka.c
   extra-libraries: rdkafka
