Add ValueUnion. Fix issues with unpinned memory and the safe ffi.

--- a/rdkafka-api.cabal
+++ b/rdkafka-api.cabal
@@ -21,6 +21,7 @@ library
     Rdkafka.Constant.ResponseError
     Rdkafka.Constant.Type
     Rdkafka.Struct.Message
+    Rdkafka.Struct.ValueUnion
     Rdkafka.Types
     -- TODO: Move these into different library.
     Rdkafka.Client
