--- a/rdkafka-api.cabal
+++ b/rdkafka-api.cabal
@@ -35,7 +35,7 @@ library
     , base >=4.12 && <4.15
     , primitive >= 0.7
     , byteslice >= 0.2.2
-    , posix-api
+    , posix-api >=0.3.5
     , bytestring >= 0.10.8 && <0.12
     , run-st >= 0.1.1
   hs-source-dirs: src
