--- a/rdkafka-api.cabal
+++ b/rdkafka-api.cabal
@@ -23,6 +23,7 @@ library
     Rdkafka.Constant.ResponseError
     Rdkafka.Constant.Type
     Rdkafka.Struct.Message
+    Rdkafka.Struct.TopicPartition
     Rdkafka.Struct.ValueUnion
     Rdkafka.Types
     -- TODO: Move these into different library.
