Add TopicPartitionList module with traverse_ helper

--- a/rdkafka-api.cabal
+++ b/rdkafka-api.cabal
@@ -24,6 +24,7 @@ library
     Rdkafka.Constant.Type
     Rdkafka.Struct.Message
     Rdkafka.Struct.TopicPartition
+    Rdkafka.Struct.TopicPartitionList
     Rdkafka.Struct.ValueUnion
     Rdkafka.Types
     -- TODO: Move these into different library.
